--- a/.github/workflows/android-build.yml
+++ b/.github/workflows/android-build.yml
@@ -28,10 +28,16 @@ jobs:
             git zip unzip openjdk-17-jdk \
             libffi-dev libssl-dev
 
-      - name: Install Buildozer and dependencies
+      - name: Install Buildozer
         run: |
           pip install --upgrade pip
           pip install buildozer cython virtualenv
+
+      - name: Accept Android SDK licenses
+        run: |
+          mkdir -p ~/.android
+          echo '### User Sources for Android SDK Manager' > ~/.android/repositories.cfg
+          yes | buildozer android accept_license || true
 
       - name: Initialize Buildozer
         run: |
@@ -39,7 +45,7 @@ jobs:
 
       - name: Build APK
         run: |
-          buildozer android debug
+          buildozer android debug || exit 1
 
       - name: Upload APK artifact
         uses: actions/upload-artifact@v4
